--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,58 @@
-.body {
-  background: linear-gradient(rgb(0, 0, 0), rgb(166, 0, 255));
-  text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  display: flex;
-  
-}
-
-
-
-
-
-
-.App-header {
-  background-color: transparent;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
- 
-  color: white;
-  width: 80px;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-
-
-.App-logo {  
-  color: white;
-  height: 80px;
-  display: flex;
-  align-items: center;
- 
-}
-
-.App-menuItems {
-  flex-grow: 1;
+.sidebar {
   display: grid;
-  align-content: center; 
-  align-items: center;
-}
-
-
-
-
-.Main {
-  left: 80px;
-  min-width: 100vh;
+  grid-template-rows: 100px auto auto;
   min-height: 100vh;
-  background: rgb(222, 219, 219);
-  border-radius: 40px 0 0  40px; 
-  position: absolute;
-  color: black;
-  
-  
+  color: white;
+  margin: auto;
+  text-align: center;
+  align-content: space-between;
+  justify-items: center;
 }
 
-.Title {
-  height: 60px;
-    position: fixed;
-    background: #fff;
-    
+
+
+.Logo {
+  align-self: center;
+}
+
+.Menu-settings {
+  padding-bottom: 30px;
+}
+
+.content {
+  background: rgb(232, 230, 230);
+  border-radius: 40px 0 0 40px;
+  display: grid;
+  grid-template-rows: 80px auto auto;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 80px auto;
+  background: linear-gradient(rgb(26, 9, 46), rgb(95, 54, 160));
+  min-height: 100vh;
+}
+
+.Heading {
+  background: white;
+  min-height: 80px;
+  border-radius: 40px 0 0 0;
+  display: grid;
+  position: sticky;
+  top: 0;
+  min-width: 100vh;
+}
+
+h1 {
+  margin-left: 30px;
+  display: grid;
+  align-self: center;
+}
+
+p {
+  margin-left: 30px;
+}
+
+.text {
+  top: 80px;
 }
